--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "nodejs-app",
   "version": "1.0.0",
   "description": "A minimal Node.js web application.",
-  "main": "app.js",
+  "main": "index.js",
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   }
 }
